--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2008-10-05  Maximilian Schleiss <maximilian@xfce.org>
+
+	* es.po: Spanish translation update (Abel Martín)
+	* et.po: Estonian translation update (Kristjan Siimson)
+
 2008-08-10  Maximilian Schleiss <maximilian@xfce.org>
 
 	* id.po: Indonesian translation updated (Andhika Padmawan)
