--- a/po/es.po
+++ b/po/es.po
@@ -2,14 +2,15 @@
 # Copyright (C) 2005-2006 Erik Harrison.
 # This file is distributed under the same license as the Mousepad package.
 # Lucas Vieites <lucas@asixinformatica.com>, 2004.
+# Abel Martín <abel.martin.ruiz@gmail.com>, 2008
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: mousepad 0.2.12\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-01-20 12:34+0100\n"
-"PO-Revision-Date: 2005-10-07 18:39+0900\n"
-"Last-Translator: Lucas Vieites <lucas@asixinformatica.com>\n"
+"PO-Revision-Date: 2008-09-20 21:00+0100\n"
+"Last-Translator: Abel Martín <abel.martin.ruiz@gmail.com>\n"
 "Language-Team: Spanish/Spain <es@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,21 +19,21 @@ msgstr ""
 #: ../src/callback.c:37
 #, c-format
 msgid "Save changes to '%s'?"
-msgstr "¿Desea guardar los cambios a «%s»?"
+msgstr "¿Guardar cambios a '%s'?"
 
-#: ../src/callback.c:213 ../src/file.c:174
+#: ../src/callback.c:213
+#: ../src/file.c:174
 #, c-format
 msgid "Can't convert codeset to '%s'"
-msgstr "No se puede convertir el conjunto de códigos a «%s»"
+msgstr "No se puede convertir el conjunto de códigos a '%s'"
 
 #: ../src/callback.c:240
-#, fuzzy
 msgid "Can't open pipe to process"
-msgstr "No se puede abrir el archivo para escritura"
+msgstr "No se puede abrir la tubería para procesar"
 
 #: ../src/callback.c:397
 msgid "A text editor for Xfce"
-msgstr ""
+msgstr "Un editor de texto para Xfce"
 
 #: ../src/dialog.c:135
 #, c-format
@@ -60,18 +61,16 @@ msgid "/File/_New"
 msgstr "/Archivo/_Nuevo"
 
 #: ../src/menu.c:66
-#, fuzzy
 msgid "/File/New _Window"
-msgstr "/Archivo/_Nuevo"
+msgstr "/Archivo/Nueva _ventana"
 
 #: ../src/menu.c:69
 msgid "/File/_Open..."
 msgstr "/Archivo/_Abrir..."
 
 #: ../src/menu.c:72
-#, fuzzy
 msgid "/File/Open _Recent"
-msgstr "/Archivo/_Abrir..."
+msgstr "/Archivo/Abrir _reciente"
 
 #: ../src/menu.c:77
 msgid "/File/_Save"
@@ -82,9 +81,8 @@ msgid "/File/Save _As..."
 msgstr "/Archivo/Guardar _como..."
 
 #: ../src/menu.c:83
-#, fuzzy
 msgid "/File/_Print..."
-msgstr "/Archivo/_Abrir..."
+msgstr "/Archivo/Im_primir..."
 
 #: ../src/menu.c:87
 msgid "/File/_Quit"
@@ -128,15 +126,15 @@ msgstr "/_Buscar"
 
 #: ../src/menu.c:111
 msgid "/Search/_Find..."
-msgstr "/Buscar/_Buscar"
+msgstr "/Buscar/_Buscar..."
 
 #: ../src/menu.c:113
 msgid "/Search/Find _Next"
-msgstr "/Buscar/Buscar el _siguiente"
+msgstr "/Buscar/Buscar _Siguiente"
 
 #: ../src/menu.c:115
 msgid "/Search/Find _Previous"
-msgstr "/Buscar/Buscar el an_terior"
+msgstr "/Buscar/Buscar an_terior"
 
 #: ../src/menu.c:117
 msgid "/Search/_Replace..."
@@ -144,7 +142,7 @@ msgstr "/Buscar/_Reemplazar"
 
 #: ../src/menu.c:121
 msgid "/Search/_Jump To..."
-msgstr "/Buscar/Ira a la _línea"
+msgstr "/Buscar/_Ir a..."
 
 #: ../src/menu.c:123
 msgid "/_Options"
@@ -164,7 +162,7 @@ msgstr "/Opciones/_Numeración de líneas"
 
 #: ../src/menu.c:133
 msgid "/Options/_Auto Indent"
-msgstr "/Opciones/_Autoindentación"
+msgstr "/Opciones/_Autoindentar"
 
 #: ../src/menu.c:135
 msgid "/_Help"
@@ -180,7 +178,7 @@ msgstr "No se ha encontrado la cadena buscada"
 
 #: ../src/search.c:115
 msgid "Replace?"
-msgstr "¿Desea reemplazar?"
+msgstr "¿Reemplazar?"
 
 #: ../src/search.c:143
 #, c-format
@@ -191,11 +189,13 @@ msgstr "Se han reemplazado %d cadenas"
 msgid "Find"
 msgstr "Buscar"
 
-#: ../src/search.c:200 ../src/search.c:265
+#: ../src/search.c:200
+#: ../src/search.c:265
 msgid "Fi_nd what: "
-msgstr "Buscar: "
+msgstr "_Buscar: "
 
-#: ../src/search.c:219 ../src/search.c:292
+#: ../src/search.c:219
+#: ../src/search.c:292
 msgid "_Match case"
 msgstr "Coi_ncidir con capitalización"
 
@@ -213,7 +213,7 @@ msgstr "Reemplaz_ar todos"
 
 #: ../src/search.c:342
 msgid "Jump To"
-msgstr "Ir a"
+msgstr "Saltar a"
 
 #: ../src/search.c:347
 msgid "_Jump"
@@ -226,11 +226,11 @@ msgstr "Número de _línea: "
 #: ../src/selector.c:103
 #, c-format
 msgid "Current Locale (%s)"
-msgstr "Locale actual (%s)"
+msgstr "Locale Actual (%s)"
 
 #: ../src/selector.c:147
 msgid "Other Codeset"
-msgstr "Otro conjunto de códigos"
+msgstr "Otro Conjunto de Códigos"
 
 #: ../src/selector.c:186
 msgid "Code_set:"
@@ -239,7 +239,7 @@ msgstr "Con_junto de códigos:"
 #: ../src/selector.c:207
 #, c-format
 msgid "'%s' is not supported"
-msgstr "No se soporta «%s»"
+msgstr "'%s' no está soportado"
 
 #: ../src/selector.c:271
 msgid "Auto Detect"
@@ -251,35 +251,35 @@ msgstr "Abrir"
 
 #: ../src/selector.c:325
 msgid "Save As"
-msgstr "Guardar como"
+msgstr "Guardar Como"
 
 #: ../src/selector.c:347
 msgid "Ch_aracter Coding: "
-msgstr "Codificación de c_aracteres: "
+msgstr "Codificación de C_aracteres: "
 
 #: ../src/selector.c:403
 #, c-format
 msgid "'%s' already exists. Overwrite?"
-msgstr "«%s» ya existe. ¿Desea sobrescribirlo?"
+msgstr "'%s' ya existe. ¿Sobrescribir?"
 
 #. add the label with the root warning
 #: ../src/window.c:110
 msgid "Warning, you are using the root account, you may harm your system."
-msgstr ""
+msgstr "Advertencia. Está usando la cuenta de root. Puede dañar su sistema."
 
 #: ../src/window.c:169
 msgid "Untitled"
-msgstr "Sin nombre"
+msgstr "Sin título"
 
 #: ../mousepad.desktop.in.h:1
 msgid "Mousepad"
-msgstr ""
+msgstr "Mousepad"
 
 #: ../mousepad.desktop.in.h:2
 msgid "Simple text editor"
 msgstr "Editor de texto simple"
 
 #: ../mousepad.desktop.in.h:3
-#, fuzzy
 msgid "Text Editor"
-msgstr "Editor de texto simple"
+msgstr "Editor de Texto"
+
