* da.po: Danish translation updated
(Old svn revision: 28310)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-10-19 Lars Nielsen <lars@mit-web.dk>
+
+	* da.po: Danish translation updated
+
 2008-10-05  Maximilian Schleiss <maximilian@xfce.org>
 
 	* es.po: Spanish translation update (Abel Martín)
