--- a/po/da.po
+++ b/po/da.po
@@ -2,18 +2,21 @@
 # Copyright (C) 2005-2006 Erik Harrison.
 # This file is distributed under the same license as the Mousepad package.
 # Ole Guldberg Jensen <olegb@omgwtf.dk>, 2008.
-#
+# Per Kongstad <p_kongstad@op.pl>, 2008.
 msgid ""
 msgstr ""
-"Project-Id-Version: mousepad 0.2.12\n"
+"Project-Id-Version: mousepad 0.2.13\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-01-20 12:34+0100\n"
-"PO-Revision-Date: 2008-05-18 00:30+0200\n"
-"Last-Translator: Ole Guldberg <olegb@omgwtf.dk>\n"
-"Language-Team: \n"
+"PO-Revision-Date: 2008-10-19 12:33+0100\n"
+"Last-Translator: Per Kongstad <p_kongstad@op.pl>\n"
+"Language-Team: Danish <dansk@dansk-gruppen.dk>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Poedit-Language: Danish\n"
+"X-Poedit-Country: DENMARK\n"
+"X-Poedit-SourceCharset: utf-8\n"
 
 #: ../src/callback.c:37
 #, c-format
@@ -24,11 +27,11 @@ msgstr "Gemme ændringer til '%s'?"
 #: ../src/file.c:174
 #, c-format
 msgid "Can't convert codeset to '%s'"
-msgstr "Kan ikke konverterer tegnsæt til '%s'"
+msgstr "Kan ikke konvertere tegnsæt til '%s'"
 
 #: ../src/callback.c:240
 msgid "Can't open pipe to process"
-msgstr "Kan ikke åbne forbindelse til processen"
+msgstr "Kan ikke åbne dataledning til proces"
 
 #: ../src/callback.c:397
 msgid "A text editor for Xfce"
@@ -41,11 +44,11 @@ msgstr "Om %s"
 
 #: ../src/file.c:187
 msgid "Can't open file to write"
-msgstr "Kan ikke åbne fil for at skrive til denne"
+msgstr "Kan ikke åbne fil for skrivning"
 
 #: ../src/file.c:192
 msgid "Can't write file"
-msgstr "Kan ikke skrive til fil"
+msgstr "Kan ikke skrive fil"
 
 #: ../src/font.c:49
 msgid "Font"
@@ -53,51 +56,51 @@ msgstr "Skrifttype"
 
 #: ../src/menu.c:61
 msgid "/_File"
-msgstr "/_Filer"
+msgstr "/_Fil"
 
 #: ../src/menu.c:63
 msgid "/File/_New"
-msgstr "/Filer/_Ny"
+msgstr "/Fil/_Ny"
 
 #: ../src/menu.c:66
 msgid "/File/New _Window"
-msgstr "/Filer/_Nyt vindue"
+msgstr "/Fil/_Nyt vindue"
 
 #: ../src/menu.c:69
 msgid "/File/_Open..."
-msgstr "/Filer/_Åben"
+msgstr "/Fil/_Åbn..."
 
 #: ../src/menu.c:72
 msgid "/File/Open _Recent"
-msgstr "/Filer/_Åben seneste"
+msgstr "/Fil/_Åbn seneste"
 
 #: ../src/menu.c:77
 msgid "/File/_Save"
-msgstr "/Filer/_Gem"
+msgstr "/Fil/_Gem"
 
 #: ../src/menu.c:79
 msgid "/File/Save _As..."
-msgstr "/Filer/Gem _som"
+msgstr "/Fil/Gem _som..."
 
 #: ../src/menu.c:83
 msgid "/File/_Print..."
-msgstr "/Filer/_Print"
+msgstr "/Fil/_Udskriv..."
 
 #: ../src/menu.c:87
 msgid "/File/_Quit"
-msgstr "/Filer/_Afslut"
+msgstr "/Fil/_Afslut"
 
 #: ../src/menu.c:89
 msgid "/_Edit"
-msgstr "/_Rediger"
+msgstr "/_Redigér"
 
 #: ../src/menu.c:91
 msgid "/Edit/_Undo"
-msgstr "/Rediger/_Fortryd"
+msgstr "/Redigér/_Fortryd"
 
 #: ../src/menu.c:93
 msgid "/Edit/_Redo"
-msgstr "/Rediger/_Gentag"
+msgstr "/Rediger/_Omgør"
 
 #: ../src/menu.c:97
 msgid "/Edit/Cu_t"
@@ -105,7 +108,7 @@ msgstr "/Rediger/_Klip"
 
 #: ../src/menu.c:99
 msgid "/Edit/_Copy"
-msgstr "/Rediger/_Kopier"
+msgstr "/Rediger/K_opiér"
 
 #: ../src/menu.c:101
 msgid "/Edit/_Paste"
@@ -117,7 +120,7 @@ msgstr "/Rediger/_Slet"
 
 #: ../src/menu.c:107
 msgid "/Edit/Select _All"
-msgstr "/Rediger/_Vælg alt"
+msgstr "/Rediger/_Vælg alle"
 
 #: ../src/menu.c:109
 msgid "/_Search"
@@ -125,7 +128,7 @@ msgstr "/_Søg"
 
 #: ../src/menu.c:111
 msgid "/Search/_Find..."
-msgstr "/Søg/_Find"
+msgstr "/Søg/_Find..."
 
 #: ../src/menu.c:113
 msgid "/Search/Find _Next"
@@ -133,7 +136,7 @@ msgstr "/Søg/Find _næste"
 
 #: ../src/menu.c:115
 msgid "/Search/Find _Previous"
-msgstr "/Find/Find _tidligere"
+msgstr "/Find/Find _forrige"
 
 #: ../src/menu.c:117
 msgid "/Search/_Replace..."
@@ -145,23 +148,23 @@ msgstr "/Søg/_Gå til..."
 
 #: ../src/menu.c:123
 msgid "/_Options"
-msgstr "/_Værktøj"
+msgstr "/_Indstillinger"
 
 #: ../src/menu.c:125
 msgid "/Options/_Font..."
-msgstr "/Værktøj/_Skrifttype"
+msgstr "/Indstillinger/_Skrifttype..."
 
 #: ../src/menu.c:127
 msgid "/Options/_Word Wrap"
-msgstr "/Værktøj/_Linieombrydning"
+msgstr "/Indstillinger/_Linjeombrydning"
 
 #: ../src/menu.c:129
 msgid "/Options/_Line Numbers"
-msgstr "/Værktøj/Linie_numre"
+msgstr "/Indstillinger/_Linjenumre"
 
 #: ../src/menu.c:133
 msgid "/Options/_Auto Indent"
-msgstr "/Værktøj/_Auto indrykning"
+msgstr "/Indstillinger/_Autoindrykning"
 
 #: ../src/menu.c:135
 msgid "/_Help"
@@ -182,12 +185,13 @@ msgstr "Erstat?"
 #: ../src/search.c:143
 #, c-format
 msgid "%d strings replaced"
-msgstr "Fundet og erstattet %d gange"
+msgstr "%d tekststrenge erstattet"
 
 #: ../src/search.c:188
 msgid "Find"
 msgstr "Find"
 
+# Her er forudsat at det er tekstsøgning
 #: ../src/search.c:200
 #: ../src/search.c:265
 msgid "Fi_nd what: "
@@ -208,7 +212,7 @@ msgstr "_Erstat med: "
 
 #: ../src/search.c:296
 msgid "Replace _all at once"
-msgstr "_Erstat alt"
+msgstr "Erstat _alle"
 
 #: ../src/search.c:342
 msgid "Jump To"
@@ -220,7 +224,7 @@ msgstr "_Gå til"
 
 #: ../src/search.c:353
 msgid "_Line number: "
-msgstr "_Linienummer: "
+msgstr "_Linjenummer: "
 
 #: ../src/selector.c:103
 #, c-format
@@ -246,7 +250,7 @@ msgstr "Automatisk genkendelse"
 
 #: ../src/selector.c:325
 msgid "Open"
-msgstr "Åben"
+msgstr "Åbn"
 
 #: ../src/selector.c:325
 msgid "Save As"
@@ -254,17 +258,17 @@ msgstr "Gem som"
 
 #: ../src/selector.c:347
 msgid "Ch_aracter Coding: "
-msgstr "_Karakter tegnsæt: "
+msgstr "_Tegnkodning: "
 
 #: ../src/selector.c:403
 #, c-format
 msgid "'%s' already exists. Overwrite?"
-msgstr "'%s' findes allerede. overskriv?"
+msgstr "'%s' findes allerede. Overskriv?"
 
 #. add the label with the root warning
 #: ../src/window.c:110
 msgid "Warning, you are using the root account, you may harm your system."
-msgstr "Advarsel, du benytter superbruger-kontoen og kan beskadige sit system."
+msgstr "Advarsel, du benytter superbruger-kontoen og kan beskadige dit system."
 
 #: ../src/window.c:169
 msgid "Untitled"
@@ -276,9 +280,9 @@ msgstr "Mousepad"
 
 #: ../mousepad.desktop.in.h:2
 msgid "Simple text editor"
-msgstr "Simpel Teksteditor"
+msgstr "Simpel tekstbehandler"
 
 #: ../mousepad.desktop.in.h:3
 msgid "Text Editor"
-msgstr "Teksteditor"
+msgstr "Tekstbehandler"
 
