--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-10-29  Maximilian Schleiss <maximilian@xfce.org>
+
+	* sq.po: Albanian translation update (Besnik Bleta)
+
 2008-10-19 Lars Nielsen <lars@mit-web.dk>
 
 	* da.po: Danish translation updated
