--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-11-02  Maximilian Schleiss <maximilian@xfce.org>
+
+	* es.po: Spanish translation update (Abel Martín)
+
 2008-10-29  Maximilian Schleiss <maximilian@xfce.org>
 
 	* sq.po: Albanian translation update (Besnik Bleta)
