--- a/po/eu.po
+++ b/po/eu.po
@@ -9,13 +9,15 @@ msgstr ""
 "Project-Id-Version: mousepad 0.2.12\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-01-20 12:34+0100\n"
-"PO-Revision-Date: 2006-05-01 00:20+0200\n"
+"PO-Revision-Date: 2008-11-06 13:13+0200\n"
 "Last-Translator: Piarres Beobide <pi@beobide.net>\n"
 "Language-Team: librezale <librezale@librezale.org>\n"
+"Language: eu\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.2\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Pootle 1.2.0\n"
 
 #: ../src/callback.c:37
 #, c-format
@@ -126,7 +128,7 @@ msgstr "/_Bilaketa"
 
 #: ../src/menu.c:111
 msgid "/Search/_Find..."
-msgstr "/Bilaketa/_Bilatu"
+msgstr "/Bilaketa/_Bilatu..."
 
 #: ../src/menu.c:113
 msgid "/Search/Find _Next"
@@ -138,7 +140,7 @@ msgstr "/Bilaketa/Bilatu _Aurrekoa"
 
 #: ../src/menu.c:117
 msgid "/Search/_Replace..."
-msgstr "/Bilaketa/_Ordeztu"
+msgstr "/Bilaketa/_Ordeztu..."
 
 #: ../src/menu.c:121
 msgid "/Search/_Jump To..."
@@ -150,7 +152,7 @@ msgstr "/_Aukerak"
 
 #: ../src/menu.c:125
 msgid "/Options/_Font..."
-msgstr "/Aukerak/_Letra-tipoa"
+msgstr "/Aukerak/_Letra-tipoa..."
 
 #: ../src/menu.c:127
 msgid "/Options/_Word Wrap"
