--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,7 +1,11 @@
+2008-11-16  Maximilian Schleiss <maximilian@xfce.org>
+
+	* de.po: German translation update (Fabian Nowak)
+	* es.po: Spanish translation update (Abel Martín)
+
 2008-11-12 Og Maciel <ogmaciel@gnome.org>
 
-	* pt_BR.po: Updated Brazilian Portuguese translation by
-	Og Maciel.
+	* pt_BR.po: Updated Brazilian Portuguese translation
 
 2008-11-11  Piarres Beobide <pi@beobide.net>
 
