--- a/po/de.po
+++ b/po/de.po
@@ -4,14 +4,15 @@
 # Sebastian Stach <sebsta@t-online.de>, 2004.
 # Enrico Tröger <enrico.troeger@uvena.de>, 2006.
 # Benedikt Meurer <benny@xfce.org>, 2006.
+# Fabian Nowak <timystery@arcor.de>, 2008.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: mousepad 0.2.12\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-01-20 12:34+0100\n"
-"PO-Revision-Date: 2006-11-04 17:10+0100\n"
-"Last-Translator: Benedikt Meurer <benny@xfce.org>\n"
+"POT-Creation-Date: 2008-11-14 22:47+0100\n"
+"PO-Revision-Date: 2008-11-14 22:45+0100\n"
+"Last-Translator: Fabian Nowak <timystery@arcor.de>\n"
 "Language-Team: German <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -20,12 +21,12 @@ msgstr ""
 #: ../src/callback.c:37
 #, c-format
 msgid "Save changes to '%s'?"
-msgstr "Änderungen an '%s' speichern?"
+msgstr "Änderungen an »%s« speichern?"
 
 #: ../src/callback.c:213 ../src/file.c:174
 #, c-format
 msgid "Can't convert codeset to '%s'"
-msgstr "Der Zeichensatz kann nicht nach '%s' konvertiert werden"
+msgstr "Der Zeichensatz kann nicht nach »%s« konvertiert werden"
 
 #: ../src/callback.c:240
 msgid "Can't open pipe to process"
@@ -228,16 +229,16 @@ msgstr "Derzeitige Standorteinstellung (%s)"
 
 #: ../src/selector.c:147
 msgid "Other Codeset"
-msgstr "Anderer Zeichensatz"
+msgstr "Andere Zeichenkodierung"
 
 #: ../src/selector.c:186
 msgid "Code_set:"
-msgstr "_Zeichensatz:"
+msgstr "_Zeichenkodierung:"
 
 #: ../src/selector.c:207
 #, c-format
 msgid "'%s' is not supported"
-msgstr "'%s' wird nicht unterstützt"
+msgstr "»%s« wird nicht unterstützt"
 
 #: ../src/selector.c:271
 msgid "Auto Detect"
@@ -258,7 +259,7 @@ msgstr "Zeichen_kodierung: "
 #: ../src/selector.c:403
 #, c-format
 msgid "'%s' already exists. Overwrite?"
-msgstr "'%s' existiert bereits. Überschreiben?"
+msgstr "»%s« existiert bereits. Überschreiben?"
 
 #. add the label with the root warning
 #: ../src/window.c:110
