--- a/po/sq.po
+++ b/po/sq.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: mousepad 0.2.12\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-01-12 13:48+0200\n"
-"PO-Revision-Date: 2008-10-22 00:32+0200\n"
+"PO-Revision-Date: 2008-11-04 22:23+0200\n"
 "Last-Translator: Besnik Bleta <besnik@programeshqip.org>\n"
 "Language-Team: Albanian <translation-team-sq@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
@@ -17,17 +17,16 @@ msgstr ""
 #: ../src/callback.c:37
 #, c-format
 msgid "Save changes to '%s'?"
-msgstr "Të ruaj ndryshimet te '%s'?"
+msgstr "Të ruhen ndryshimet te '%s'?"
 
-#: ../src/callback.c:213
-#: ../src/file.c:174
+#: ../src/callback.c:213 ../src/file.c:174
 #, c-format
 msgid "Can't convert codeset to '%s'"
-msgstr "S'shndërroj dot kodim gërmash në '%s'"
+msgstr "S'shndërrohet dot kodimi i gërmave në '%s'"
 
 #: ../src/callback.c:240
 msgid "Can't open pipe to process"
-msgstr "S'hap dot pipë te procesi"
+msgstr "S'hapet dot pipë te procesi"
 
 #: ../src/callback.c:397
 msgid "A text editor for Xfce"
@@ -40,11 +39,11 @@ msgstr "Rreth %s"
 
 #: ../src/file.c:187
 msgid "Can't open file to write"
-msgstr "S'hap dot kartelë për shkrim"
+msgstr "S'hapet dot kartelë për shkrim"
 
 #: ../src/file.c:192
 msgid "Can't write file"
-msgstr "S'shkruaj dot te kartela"
+msgstr "S'shkruahet dot te kartela"
 
 #: ../src/font.c:49
 msgid "Font"
@@ -176,7 +175,7 @@ msgstr "Nuk u gjet varg kërkimi"
 
 #: ../src/search.c:115
 msgid "Replace?"
-msgstr "Ta zëvendësoj?"
+msgstr "Ta zëvendësojë?"
 
 #: ../src/search.c:143
 #, c-format
@@ -187,13 +186,11 @@ msgstr "%d vargje të zëvendësuara"
 msgid "Find"
 msgstr "Gjej"
 
-#: ../src/search.c:200
-#: ../src/search.c:265
+#: ../src/search.c:200 ../src/search.c:265
 msgid "Fi_nd what: "
 msgstr "Gj_ej çfarë: "
 
-#: ../src/search.c:219
-#: ../src/search.c:292
+#: ../src/search.c:219 ../src/search.c:292
 msgid "_Match case"
 msgstr "Siç është _shkruajtur"
 
@@ -258,7 +255,7 @@ msgstr "Kodim Gërmash: "
 #: ../src/selector.c:403
 #, c-format
 msgid "'%s' already exists. Overwrite?"
-msgstr "Ka një '%s'. Ta mbishkruaj?"
+msgstr "Ka një '%s'. Ta mbishkruajë?"
 
 #. add the label with the root warning
 #: ../src/window.c:110
@@ -280,4 +277,3 @@ msgstr "Përpunues i thjeshtë tekstesh"
 #: ../mousepad.desktop.in.h:3
 msgid "Text Editor"
 msgstr "Përpunues Tekstesh"
-
