--- a/po/eu.po
+++ b/po/eu.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: mousepad 0.2.12\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-01-20 12:34+0100\n"
-"PO-Revision-Date: 2008-11-09 15:51+0200\n"
+"PO-Revision-Date: 2008-11-21 10:34+0200\n"
 "Last-Translator: Piarres Beobide <pi@beobide.net>\n"
 "Language-Team: librezale <librezale@librezale.org>\n"
 "Language: eu\n"
@@ -163,9 +163,8 @@ msgid "/Options/_Line Numbers"
 msgstr "/Aukerak/_Lerro zenbakiak"
 
 #: ../src/menu.c:133
-#, fuzzy
 msgid "/Options/_Auto Indent"
-msgstr "/Aukerak/_Auto kontaktu"
+msgstr "/Aukerak/_Auto koskatu"
 
 #: ../src/menu.c:135
 msgid "/_Help"
