--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-11-23  Maximilian Schleiss <maximilian@xfce.org>
+
+	* nb.po: Norwegian Bokmal translation update (Terje Uriansrud)
+
 2008-11-21  Piarres Beobide <pi@beobide.net>
 
         * eu.po: Basque translation update
