--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-11-25 Lars Nielsen <lars@mit-web.dk>
+
+	* da.po: Update danish translation
+
 2008-11-23  Maximilian Schleiss <maximilian@xfce.org>
 
 	* nb.po: Norwegian Bokmal translation update (Terje Uriansrud)
