--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,14 +1,15 @@
-<<<<<<< .mine
+2008-11-30  Maximilian Schleiss <maximilian@xfce.org>
+
+	* ja.po: Japanese translation update (Masato Hashimoto)
+
 2008-11-25  Maximilian Schleiss <maximilian@xfce.org>
 
 	* es.po: Spanish translation update (Abel Martín)
 
-=======
 2008-11-25 Lars Nielsen <lars@mit-web.dk>
 
 	* da.po: Update danish translation
 
->>>>>>> .r28913
 2008-11-23  Maximilian Schleiss <maximilian@xfce.org>
 
 	* nb.po: Norwegian Bokmal translation update (Terje Uriansrud)
