Czech translation fixed
(Old svn revision: 29039)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-12-22  Michal Várady <miko.vaji@gmail.com>
+
+	* cs.po: Czech translation fixed
+
 2008-12-10  Alexander Toresson <eulex@xfce.org>
 
 	* sv.po: Swedish translation update (Daniel Nylander)
