--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-12-25  Maximilian Schleiss <maximilian@xfce.org>
+
+	* zh_CN: Simplified Chinese translation update (Hunt Xu)
+
 2008-12-22  Michal Várady <miko.vaji@gmail.com>
 
 	* cs.po: Czech translation fixed
