--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-01-04  Maximilian Schleiss <maximilian@xfce.org>
+
+	* pl.po: Polish translation update (Piotr Sokół)
+
 2008-12-25  Maximilian Schleiss <maximilian@xfce.org>
 
 	* zh_CN: Simplified Chinese translation update (Hunt Xu)
