--- a/po/pl.po
+++ b/po/pl.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: mousepad 0.2.12\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-01-20 12:34+0100\n"
-"PO-Revision-Date: 2007-01-20 22:49+0200\n"
-"Last-Translator: Szymon Kałasz <szymon_maestro@gazeta.pl>\n"
+"PO-Revision-Date: 2008-12-05 12:28+0100\n"
+"Last-Translator: Piotr Sokół <piotr.sokol@10g.pl>\n"
 "Language-Team: Polish <translation-team-pl@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -19,12 +19,13 @@ msgstr ""
 #: ../src/callback.c:37
 #, c-format
 msgid "Save changes to '%s'?"
-msgstr "Zachować zmiany w '%s'?"
+msgstr "Zapisać zmiany w „%s”?"
 
-#: ../src/callback.c:213 ../src/file.c:174
+#: ../src/callback.c:213
+#: ../src/file.c:174
 #, c-format
 msgid "Can't convert codeset to '%s'"
-msgstr "Nie można przekonwertować strony kodowej do '%s'"
+msgstr "Nie można przekonwertować strony kodowej do „%s”"
 
 #: ../src/callback.c:240
 msgid "Can't open pipe to process"
@@ -32,7 +33,7 @@ msgstr "Nie można otworzyć rurki dla procesu"
 
 #: ../src/callback.c:397
 msgid "A text editor for Xfce"
-msgstr "Edytor tekstowy dla Xfce"
+msgstr "Edytor tekstu dla Xfce"
 
 #: ../src/dialog.c:135
 #, c-format
@@ -61,23 +62,23 @@ msgstr "/Plik/_Nowy"
 
 #: ../src/menu.c:66
 msgid "/File/New _Window"
-msgstr "/Plik/Nowe_Okno"
+msgstr "/Plik/No_we okno"
 
 #: ../src/menu.c:69
 msgid "/File/_Open..."
-msgstr "/Plik/_Otwórz"
+msgstr "/Plik/_Otwórz..."
 
 #: ../src/menu.c:72
 msgid "/File/Open _Recent"
-msgstr "/Plik/Ostatnio otwie_rane"
+msgstr "/Plik/Ostatnio otwa_rte"
 
 #: ../src/menu.c:77
 msgid "/File/_Save"
-msgstr "/Plik/_Zapisz"
+msgstr "/Plik/Z_apisz"
 
 #: ../src/menu.c:79
 msgid "/File/Save _As..."
-msgstr "/Plik/Zapisz j_ako"
+msgstr "/Plik/Zapi_sz jako..."
 
 #: ../src/menu.c:83
 msgid "/File/_Print..."
@@ -93,15 +94,15 @@ msgstr "/_Edycja"
 
 #: ../src/menu.c:91
 msgid "/Edit/_Undo"
-msgstr "/Edycja/C_ofnij"
+msgstr "/Edycja/_Cofnij"
 
 #: ../src/menu.c:93
 msgid "/Edit/_Redo"
-msgstr "/Edycja/Anuluj _cofnięcie"
+msgstr "/Edycja/_Powtórz"
 
 #: ../src/menu.c:97
 msgid "/Edit/Cu_t"
-msgstr "/Edycja/Wyt_nij"
+msgstr "/Edycja/_Wytnij"
 
 #: ../src/menu.c:99
 msgid "/Edit/_Copy"
@@ -109,7 +110,7 @@ msgstr "/Edycja/S_kopiuj"
 
 #: ../src/menu.c:101
 msgid "/Edit/_Paste"
-msgstr "/Edycja/Wkl_ej"
+msgstr "/Edycja/Wk_lej"
 
 #: ../src/menu.c:103
 msgid "/Edit/_Delete"
@@ -117,31 +118,31 @@ msgstr "/Edycja/_Usuń"
 
 #: ../src/menu.c:107
 msgid "/Edit/Select _All"
-msgstr "/Edycja/_Zaznacz wszystko"
+msgstr "/Edycja/Zaznacz _wszystko"
 
 #: ../src/menu.c:109
 msgid "/_Search"
-msgstr "/_Szukaj"
+msgstr "/_Znajdowanie"
 
 #: ../src/menu.c:111
 msgid "/Search/_Find..."
-msgstr "/Szukaj/_Znajdź"
+msgstr "/Znajdowanie/_Znajdź..."
 
 #: ../src/menu.c:113
 msgid "/Search/Find _Next"
-msgstr "/Szukaj/Znajdź _następny"
+msgstr "/Znajdowanie/Znajdź _następny"
 
 #: ../src/menu.c:115
 msgid "/Search/Find _Previous"
-msgstr "/Szukaj/Znaj_dź poprzedni"
+msgstr "/Znajdowanie/Znaj_dź poprzedni"
 
 #: ../src/menu.c:117
 msgid "/Search/_Replace..."
-msgstr "/Szukaj/Z_astąp"
+msgstr "/Znajdowanie/Z_astąp..."
 
 #: ../src/menu.c:121
 msgid "/Search/_Jump To..."
-msgstr "/Szukaj/_Idź do..."
+msgstr "/Znajdowanie/_Przejdź do..."
 
 #: ../src/menu.c:123
 msgid "/_Options"
@@ -149,15 +150,15 @@ msgstr "/_Opcje"
 
 #: ../src/menu.c:125
 msgid "/Options/_Font..."
-msgstr "/Opcje/_Czcionka"
+msgstr "/Opcje/_Czcionka..."
 
 #: ../src/menu.c:127
 msgid "/Options/_Word Wrap"
-msgstr "/Opcje/_Zawijanie linii"
+msgstr "/Opcje/_Zawijanie wierszy"
 
 #: ../src/menu.c:129
 msgid "/Options/_Line Numbers"
-msgstr "/Opcje/_Numerowanie linii"
+msgstr "/Opcje/_Numerowanie wierszy"
 
 #: ../src/menu.c:133
 msgid "/Options/_Auto Indent"
@@ -182,48 +183,50 @@ msgstr "Zastąpić?"
 #: ../src/search.c:143
 #, c-format
 msgid "%d strings replaced"
-msgstr "%d łańcuchów zastąpiono"
+msgstr "zastąpiono łańcuchów %d"
 
 #: ../src/search.c:188
 msgid "Find"
-msgstr "Znajdź"
+msgstr "Znajdowanie"
 
-#: ../src/search.c:200 ../src/search.c:265
+#: ../src/search.c:200
+#: ../src/search.c:265
 msgid "Fi_nd what: "
 msgstr "_Znajdź: "
 
-#: ../src/search.c:219 ../src/search.c:292
+#: ../src/search.c:219
+#: ../src/search.c:292
 msgid "_Match case"
-msgstr "_Uwzględniaj wielkość liter"
+msgstr "_Uwzględnianie wielkości liter"
 
 #: ../src/search.c:253
 msgid "Replace"
-msgstr "Zastąp"
+msgstr "Zastępowanie"
 
 #: ../src/search.c:280
 msgid "Re_place with: "
-msgstr "Z_amień na: "
+msgstr "Z_astąp na: "
 
 #: ../src/search.c:296
 msgid "Replace _all at once"
-msgstr "Zamień _wszystko"
+msgstr "Zastępowanie _wszystkiego"
 
 #: ../src/search.c:342
 msgid "Jump To"
-msgstr "Idź do"
+msgstr "Przechodzenie"
 
 #: ../src/search.c:347
 msgid "_Jump"
-msgstr "_Idź"
+msgstr "_Przejdź"
 
 #: ../src/search.c:353
 msgid "_Line number: "
-msgstr "Numer _linii: "
+msgstr "Numer _wiersza: "
 
 #: ../src/selector.c:103
 #, c-format
 msgid "Current Locale (%s)"
-msgstr "Domyślne Kodowanie (%s)"
+msgstr "Domyślne kodowanie (%s)"
 
 #: ../src/selector.c:147
 msgid "Other Codeset"
@@ -236,7 +239,7 @@ msgstr "_Strona kodowa:"
 #: ../src/selector.c:207
 #, c-format
 msgid "'%s' is not supported"
-msgstr "'%s' nie jest obsługiwany(a)"
+msgstr "„%s” nie jest obsługiwany(a)"
 
 #: ../src/selector.c:271
 msgid "Auto Detect"
@@ -244,25 +247,25 @@ msgstr "Autowykrywanie"
 
 #: ../src/selector.c:325
 msgid "Open"
-msgstr "Otwórz"
+msgstr "Wybór pliku"
 
 #: ../src/selector.c:325
 msgid "Save As"
-msgstr "Zapisz jako"
+msgstr "Wybór pliku"
 
 #: ../src/selector.c:347
 msgid "Ch_aracter Coding: "
-msgstr "Stron_a kodowa: "
+msgstr "_Strona kodowa: "
 
 #: ../src/selector.c:403
 #, c-format
 msgid "'%s' already exists. Overwrite?"
-msgstr "'%s' już istnieje. Czy go zastąpić?"
+msgstr "Plik „%s” już istnieje. Zastąpić go?"
 
 #. add the label with the root warning
 #: ../src/window.c:110
 msgid "Warning, you are using the root account, you may harm your system."
-msgstr "Uwaga, używasz konta root, możesz uszkodzić swój system."
+msgstr "Uwaga: aktualnie używane jest konto użytkowanika root. Istnieje możliwość uszkodzenia systemu."
 
 #: ../src/window.c:169
 msgid "Untitled"
@@ -278,4 +281,5 @@ msgstr "Prosty edytor tekstu"
 
 #: ../mousepad.desktop.in.h:3
 msgid "Text Editor"
-msgstr "Edytor Tekstu"
+msgstr "Edytor tekstu"
+
