--- a/po/pl.po
+++ b/po/pl.po
@@ -3,15 +3,16 @@
 # This file is distributed under the same license as the Mousepad package.
 # Michal Wrobel <wrobel@task.gda.pl>, 2004.
 # Szymon Kałasz <szymon_maestro@gazeta.pl>, 2007.
+# Piotr Sokół <piotr.sokol@10g.pl>, 2009.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: mousepad 0.2.12\n"
+"Project-Id-Version: mousepad 0.2.14\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-01-20 12:34+0100\n"
-"PO-Revision-Date: 2008-12-05 12:28+0100\n"
+"PO-Revision-Date: 2009-01-30 15:12+0100\n"
 "Last-Translator: Piotr Sokół <piotr.sokol@10g.pl>\n"
-"Language-Team: Polish <translation-team-pl@lists.sourceforge.net>\n"
+"Language-Team: Polish\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -19,7 +20,7 @@ msgstr ""
 #: ../src/callback.c:37
 #, c-format
 msgid "Save changes to '%s'?"
-msgstr "Zapisać zmiany w „%s”?"
+msgstr "Zapisać zmiany w pliku „%s”?"
 
 #: ../src/callback.c:213
 #: ../src/file.c:174
@@ -33,12 +34,12 @@ msgstr "Nie można otworzyć rurki dla procesu"
 
 #: ../src/callback.c:397
 msgid "A text editor for Xfce"
-msgstr "Edytor tekstu dla Xfce"
+msgstr "Edytor tekstu dla środowiska Xfce"
 
 #: ../src/dialog.c:135
 #, c-format
 msgid "About %s"
-msgstr "O %s"
+msgstr "Informacje o %s"
 
 #: ../src/file.c:187
 msgid "Can't open file to write"
@@ -122,27 +123,27 @@ msgstr "/Edycja/Zaznacz _wszystko"
 
 #: ../src/menu.c:109
 msgid "/_Search"
-msgstr "/_Znajdowanie"
+msgstr "/_Widok"
 
 #: ../src/menu.c:111
 msgid "/Search/_Find..."
-msgstr "/Znajdowanie/_Znajdź..."
+msgstr "/Widok/_Znajdź..."
 
 #: ../src/menu.c:113
 msgid "/Search/Find _Next"
-msgstr "/Znajdowanie/Znajdź _następny"
+msgstr "/Widok/Znajdź _następny"
 
 #: ../src/menu.c:115
 msgid "/Search/Find _Previous"
-msgstr "/Znajdowanie/Znaj_dź poprzedni"
+msgstr "/Widok/Znaj_dź poprzedni"
 
 #: ../src/menu.c:117
 msgid "/Search/_Replace..."
-msgstr "/Znajdowanie/Z_astąp..."
+msgstr "/Widok/Z_astąp..."
 
 #: ../src/menu.c:121
 msgid "/Search/_Jump To..."
-msgstr "/Znajdowanie/_Przejdź do..."
+msgstr "/Widok/_Przejdź do..."
 
 #: ../src/menu.c:123
 msgid "/_Options"
@@ -174,16 +175,16 @@ msgstr "/Pomoc/_O programie"
 
 #: ../src/search.c:73
 msgid "Search string not found"
-msgstr "Szukany łańcuch nie został znaleziony"
+msgstr "Szukany ciąg znaków nie został znaleziony"
 
 #: ../src/search.c:115
 msgid "Replace?"
-msgstr "Zastąpić?"
+msgstr "Zastąpić znaleziony ciąg znaków?"
 
 #: ../src/search.c:143
 #, c-format
 msgid "%d strings replaced"
-msgstr "zastąpiono łańcuchów %d"
+msgstr "zastąpiono %d ciągów"
 
 #: ../src/search.c:188
 msgid "Find"
@@ -209,7 +210,7 @@ msgstr "Z_astąp na: "
 
 #: ../src/search.c:296
 msgid "Replace _all at once"
-msgstr "Zastępowanie _wszystkiego"
+msgstr "Zastąpienie _wszystkich ciągów"
 
 #: ../src/search.c:342
 msgid "Jump To"
@@ -239,11 +240,11 @@ msgstr "_Strona kodowa:"
 #: ../src/selector.c:207
 #, c-format
 msgid "'%s' is not supported"
-msgstr "„%s” nie jest obsługiwany(a)"
+msgstr "„%s” nie jest obsługiwany"
 
 #: ../src/selector.c:271
 msgid "Auto Detect"
-msgstr "Autowykrywanie"
+msgstr "Automatyczne wykrywanie"
 
 #: ../src/selector.c:325
 msgid "Open"
@@ -265,11 +266,11 @@ msgstr "Plik „%s” już istnieje. Zastąpić go?"
 #. add the label with the root warning
 #: ../src/window.c:110
 msgid "Warning, you are using the root account, you may harm your system."
-msgstr "Uwaga: aktualnie używane jest konto użytkowanika root. Istnieje możliwość uszkodzenia systemu."
+msgstr "Uwaga: używane konto należy do użytkowanika root. Istnieje możliwość uszkodzenia systemu."
 
 #: ../src/window.c:169
 msgid "Untitled"
-msgstr "Dokument"
+msgstr "Bez tytułu"
 
 #: ../mousepad.desktop.in.h:1
 msgid "Mousepad"
